## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = parallel-tests

EXAMPLES = \
	cylinder \
	rt \
	boussinesq \
	tangaroa \
	logo \
	column \
	starting \
	tides \
	ship \
	forcedturbulence \
	garden \
	dam \
	hump \
	monai \
	tsunami \
	cyclone \
	plateau \
	atomisation

WEBROOT = /var/www/gerris

EXTRA_DIST = \
	template.tex \
	examples.bib \
	gfs2tex.py \
	gfs2tex \
	depend.py \
	test.py \
	Makefile.deps \
	crossref.sh.in \
	gfsxref \
	gfs-mode.el \
	modulesyms.sh \
	gfs.sty gfs.hva kaltura.sh \
	gfs.php.sh

bin_SCRIPTS = \
	gfs2doc gfs-highlight gfsxref

BUILT_SOURCES= \
	gfs2doc gfs-highlight gfs.lang gerris.dic gfs-keywords.el gfs.php

CLEANFILES = $(BUILT_SOURCES) Makefile.deps

pkglib_DATA = gfs2tex.py
pkgdata_DATA = gfs.lang gerris.dic gfs-keywords.el gfs-mode.el gfs.sty gfs.hva kaltura.sh gfs.php

gerris.dic: classes modulesyms.sh $(top_srcdir)/modules/Makefile.am modules.list
	($(srcdir)/classes && sh $(srcdir)/modulesyms.sh $(top_srcdir)/modules $(pkglibdir)) | sort > gerris.dic

gfs.lang: gerris.dic
	echo "# Language file for source-highlight" > gfs.lang
	echo "# Generated automatically by classes.c" >> gfs.lang
	awk '{ printf ("gfs_keyword = \"%s\"\n", $$1) }' < gerris.dic >> gfs.lang
	echo "include \"cpp.lang\"" >> gfs.lang
	echo "comment start \"#\"" >> gfs.lang
	echo "redef preproc = \"C preprocessor command is not compatible with the use of # as comment character in GTS\"" >> gfs.lang

modules.list: modules $(top_srcdir)/modules/Makefile.am
	$(srcdir)/modules $(top_srcdir)/modules/*.la $(pkglibdir)/*.so | sort | uniq > modules.list

gfs-keywords.el: gerris.dic modules.list
	echo "(defvar gfs-abbrevs '(" > gfs-keywords.el
	awk '{ printf ("\"%s\"\n", $$1) }' < gerris.dic >> gfs-keywords.el
	echo ")" >> gfs-keywords.el
	echo "\"Gerris keywords automatically generated by classes.c.\")" >> gfs-keywords.el
	echo "(defvar gfs-modules '(" >> gfs-keywords.el
	awk '{ printf ("\"%s\"\n", $$1) }' < modules.list >> gfs-keywords.el
	echo ")" >> gfs-keywords.el
	echo "\"Gerris modules automatically generated by modules.c.\")" >> gfs-keywords.el
	echo "(provide 'gfs-keywords)" >> gfs-keywords.el

gfs.php: gerris.dic modules.list gfs.php.sh
	sh gfs.php.sh > gfs.php

gfs2doc: gfs2doc.in

gfs-highlight: gfs-highlight.in

clean-generic:
	$(RM) *.dvi *.aux *.log *.toc *.out examples.tex *.pyc test.sh gfs2doc
	$(RM) -r examples

DOC = examples

examples: examples.dvi crossref.sh
	hevea -fix $(DOC).tex
	imagen -res 600 -extra "pnmscale 0.24" $(DOC)
	hacha $(DOC).html
	rm -f $(DOC).html
	mv -f $(DOC)[0-9][0-9][0-9].png $(DOC)
##	fixme: the character conversion below is a workaround for a bug in hevea version < 1.09
##	for f in *.html; do konwert iso1-utf8 < $$f > $(DOC)/$$f; rm -f $$f; done
	mv -f *.html $(DOC)
	cat $(DOC).css ../share/darcs.css > $(DOC)/$(DOC).css
	for f in $(DOC)/*.html; do sh kaltura.sh $$f; done
	sh ../share/fixnav.sh $(DOC)
	cp -f ../share/contents.png ../share/next.png ../share/prev.png $(DOC)
	rm -f *_motif.gif $(DOC).h{tml,aux,ind,toc} $(DOC).image.tex $(DOC).css
	sh ./crossref.sh --url=http://gerris.dalembert.upmc.fr/gerris/examples/examples $(EXAMPLES)
	mv references examples

examples.dvi: examples.tex examples.bib
	- latex -interaction=nonstopmode examples.tex > /dev/null 2>&1
	bibtex examples
	- latex -interaction=nonstopmode examples.tex > /dev/null 2>&1
	latex -interaction=nonstopmode examples.tex

examples.pdf: examples.dvi
	dvips -Ppdf -G0 examples.dvi -o examples.ps
	ps2pdf -sPAPERSIZE=a4 -dMaxSubsetPct=100 -dCompatibilityLevel=1.2 -dSubsetFonts=true -dEmbedAllFonts=true examples.ps examples.pdf
	rm -f examples.ps

examples.tex: template.tex Makefile.deps gfs2tex gfs2tex.py
	rm -r -f examples
	python gfs2tex $(EXAMPLES)
	sed "s/GFS_VERSION/`$(top_srcdir)/src/gerris2D -V 2>&1 | head -1 | cut -d' ' -f6-`/g" < template.tex | sed 's/\\today/'"`date +\"%B %e, %Y\"`/g" > examples.tex

Makefile.deps: depend.py Makefile.am
	python depend.py $(EXAMPLES) > Makefile.deps

include Makefile.deps

examples.tar.gz: examples.pdf examples $(DOCS)
	tar czf examples.tar.gz examples $(DOCS)
	rm -r -f examples

INCLUDES = -I$(top_srcdir)/src -I$(includedir) -DG_LOG_DOMAIN=\"Gfs-tools\"\
            $(GTS_CFLAGS)

noinst_PROGRAMS = classes modules

classes: classes.c $(top_srcdir)/src/init.c
	$(LIBTOOL) --mode=link $(CC) $(AM_CFLAGS) $(INCLUDES) -DFTT_2D=1 \
	classes.c -o classes $(GFS2D_LIBS)

modules: modules.c
	$(LIBTOOL) --mode=link $(CC) $(AM_CFLAGS) $(INCLUDES) -DFTT_2D=1 \
	modules.c -o modules $(GFS2D_LIBS)

publish: examples.tar.gz
	cp examples.tar.gz $(WEBROOT)/examples
	cd $(WEBROOT)/examples && tar xzf examples.tar.gz && rm -f examples.tar.gz
